<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gmalv.cr.fi.ejercicio5clima.MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/clima_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btnActualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_actualizar"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnHistorico"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_boton_clima_historicos"
                android:layout_weight="1" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical">

                    <TextClock
                        android:id="@+id/tcFecha"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:format12Hour="@string/dateformat"
                        android:format24Hour="@string/dateformat"
                        android:textColor="@color/colorWhite"
                        android:textSize="30sp" />

                    <TextClock
                        android:id="@+id/tcHora"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:format12Hour="@string/format12Hour"
                        android:format24Hour="@string/format24Hour"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="30sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblTemperatura"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/defaultText"
                        android:textColor="@color/colorWhite"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/lblTempMinMax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/defaultText"
                        android:textColor="@color/colorWhite"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblCiudad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/defaultText"
                        android:textColor="@color/colorWhite"
                        android:textSize="30sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:layout_marginLeft="15dp">

                    <TextView
                        android:id="@+id/lblClima"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/defaultText"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        android:textColor="@color/colorWhite"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/lblDescripcionClima"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/defaultText"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        android:textColor="@color/colorWhite"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:layout_marginLeft="15dp">

                    <TextView
                        android:id="@+id/lblIconoClima"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/defaultText"
                        android:layout_gravity="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="50sp"
                        android:gravity="center_vertical"
                        android:layout_weight="1"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="15dp" >

                        <TextView
                            android:id="@+id/lblHumedad"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_humedad"
                            android:gravity="center_vertical"
                            android:layout_weight="1"
                            android:textColor="@color/colorWhite"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/lblHumedadInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/defaultText"
                            android:gravity="center_vertical"
                            android:layout_weight="1"
                            android:textColor="@color/colorWhite"
                            android:textSize="25sp"
                            android:layout_marginLeft="15dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="15dp" >

                        <TextView
                            android:id="@+id/lblViento"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_viento"
                            android:gravity="center_vertical"
                            android:layout_weight="1"
                            android:textColor="@color/colorWhite"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/lblVientoInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/defaultText"
                            android:gravity="center_vertical"
                            android:layout_weight="1"
                            android:textColor="@color/colorWhite"
                            android:textSize="25sp"
                            android:layout_marginLeft="15dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="15dp" >

                        <TextView
                            android:id="@+id/lblNivelMar"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_nivel_mar"
                            android:gravity="center_vertical"
                            android:layout_weight="1"
                            android:textColor="@color/colorWhite"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/lblNivelMarInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/defaultText"
                            android:gravity="center_vertical"
                            android:layout_weight="1"
                            android:textColor="@color/colorWhite"
                            android:textSize="25sp"
                            android:layout_marginLeft="15dp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
